# ZYX

./: .clang-format  .gitignore  CMakeLists.txt  README.md
res/shaders/: default.fs  default.vs
src/: Input.hpp  LinuxInput.cpp  LinuxInput.hpp  MainLoop.cpp  MainLoop.hpp  Style.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp  main.cpp
src/core/: Camera.cpp  Camera.hpp  Debug.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp  include.hpp
src/core/input/: Input.hpp  LinuxInput.cpp
src/core/renderer/: ElementBufferObject.cpp  ElementBufferObject.hpp  Framerate.cpp  Framerate.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp  entity.cpp  entity.hpp
